// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <div>
    <h1>
      Jobly
    </h1>
    <p>
      All the jobs in one, convenient place.
    </p>
    <h2>
      Welcome Back, testuser!
    </h2>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <div>
    <h1>
      Jobly
    </h1>
    <p>
      All the jobs in one, convenient place.
    </p>
    <p>
      <a
        href="/login"
      >
        Log in
      </a>
      <a
        href="/signup"
      >
        Sign up
      </a>
    </p>
  </div>
</DocumentFragment>
`;
